# Arwen_Synth

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.cargo/: config.toml
src/: language.rs  lib.rs  main.rs  parser_interface.rs  types.rs
src/data_structures/: README.md  ecta_conversion.rs  fragment.rs  inverse_map.rs  min_heap.rs  mod.rs  type_map.rs
src/data_structures/snapshots/: arwen_synth__data_structures__fragment__fragment_collection-2.snap  arwen_synth__data_structures__fragment__fragment_collection.snap
src/language/: README.md  in_out_examples.rs  language.rs  mod.rs  sketches.rs  types.rs
src/libraries/: mod.rs
tests/: bool.rs  deductive.rs  ecta_conversion.rs  inductive.rs  list.rs  nat.rs  sketch_order.rs
tests/benchmarks/: elrond_customstk.mls
tests/libraries/: mod.rs
tests/snapshots/: bool__bool_always_false.snap  bool__bool_always_true.snap  bool__bool_band.snap  bool__bool_bor.snap  bool__bool_impl.snap  bool__bool_neg.snap  bool__bool_xor.snap  deductive__easy_deductive_synth.snap  ecta_conversion__conversion_1.snap  ecta_conversion__conversion_2.snap  inductive__inductive_synthesis_negation.snap  list__list_append.snap.new  list__list_hd.snap  list__list_hd.snap.new  list__list_length.snap  list__list_tl.snap  nat__nat_max.snap  nat__nat_pred.snap  sketch_order__sketch_order.snap
