[package]
name = "arwen_synth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.7"
insta = "1.29.0"
itertools = "0.10.5"
rand = "0.8.5"
program_synthesis_parser = { git = "https://github.com/Pat-Lafon-Synthesis/program_synthesis_parser.git" }
ecta-rs = { git = "https://github.com/Pat-Lafon-Synthesis/ecta-rs.git" }
z3 = { version = "0.11.2", features = ["static-link-z3"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.10.0"
test-log = "0.2.11"
cfg-if = "1.0.0"
petgraph = "0.6.3"

[dev-dependencies]
criterion = "0.4"

[patch.crates-io]
z3 = {git = "https://github.com/prove-rs/z3.rs.git"}
